# SystemRDL-demo

./: .gitignore  README.md  example-uvm.v  example.md  example.rdl  example.simple.py  example.xml  generate_all.sh  pyproject.toml
cpp/: some_register_map_hal.h
html/: index.html
html/data/: ral-data-0.json
html/search/: bkt-0.json  bkt_index.js
python/some_register_map/reg_model/: some_register_map.py
python/some_register_map/tests/: _some_register_map_test_base.py  test_some_register_map.py
regblock/: some_register_map.sv  some_register_map_pkg.sv
some_register_map/reg_model/: some_register_map.h
some_register_map/tests/: test_some_register_map.c
vhdl/: gen_files_vhdl.txt
vhdl/vhdl/some_register_map/: pkg_some_register_map.vhd  some_register_map.vhd  some_register_map_decoder_axi4l.vhd
